default open posts

--- a/profilePage/HomestayUserProfilePage.html
+++ b/profilePage/HomestayUserProfilePage.html
@@ -38,7 +38,7 @@
     </div>
     <div class="tabContainer">
         <div class="tab" id="tab">
-            <button type="button" class="tablinks" onclick="openPosts(event, 'Posts')"><span class="tabText">Posts</span></button>
+            <button type="button" class="tablinks" onclick="openPosts(event, 'Posts')" id="defaultOpen"><span class="tabText">Posts</span></button>
             <button type="button" class="tablinks" onclick="openHomestay(event, 'Homestay')"><span class="tabText">Homestay</span></button>
         </div>
     </div>
