--- a/profilePage/HomestayUserProfilePage.html
+++ b/profilePage/HomestayUserProfilePage.html
@@ -75,7 +75,8 @@
     <div id="Homestay" class="tabContent">
         <div class="postContainer">
             <div class="addressContainer">
-                <img class="addressImage" src="address.jpg">
+                <img class="homestayImage" src="address.jpg">
+                <img class="homestayImage" src="livingRoom.png">
             </div>
         </div>
     </div>
