Make delete pet form button work

--- a/profile_edit_page/profile_edit.html
+++ b/profile_edit_page/profile_edit.html
@@ -138,7 +138,7 @@
 			<ul>
 
 				<li class="info">
-					your furry family <button id="deletePetButton"></button>
+					your furry family <button id="deletePetButton" onclick="delPetForm(this)"></button>
 				</li>
 
 				<li class="infoDetail"> 
