--- a/profilePage/HomestayUserProfilePage.html
+++ b/profilePage/HomestayUserProfilePage.html
@@ -74,7 +74,24 @@
 
     <div id="Homestay" class="tabContent">
         <div class="postContainer">
-            <div class="addressContainer">
+            <div class="homestayInfoContainer">
+                <div class="accessibilityContainer">
+                    <ul>
+                        <li><img class="accessibilityPics" src="animal.png"></li>
+                        <li><img class="accessibilityPics" src="bathing.png"></li>
+                        <li><img class="accessibilityPics" src="animal-feed.png"></li>
+                        <li><img class="accessibilityPics" src="animal-shelter.png"></li>
+                    </ul>
+                </div>
+                <span class="description">Any user with paw print on the name card is a Pets Homestay. Following are details about this homestay.</span>
+                <br>
+                <span class="accessibilityDetail">Accessibility: Walking Dog, Bathing, Feeding, Day Care</span>
+                <br>
+                <span class="accessibilityDetail">Phone: 123-456-789</span>
+                <br>
+                <span class="accessibilityDetail">Email: user1@gmail.com</span>
+                <br>
+                <span class="accessibilityDetail">Address: 38 Elm St</span>
                 <img class="homestayImage" src="address.jpg">
                 <img class="homestayImage" src="livingRoom.png">
             </div>
