--- a/profilePage/RegularUserProfilePage.html
+++ b/profilePage/RegularUserProfilePage.html
@@ -1,8 +1,8 @@
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <title>
-      Geddit
+      Fluffy
     </title>
     <link rel="stylesheet" type="text/css" href="ProfilePageStyle.css" />
 </head>
