--- a/profilePage/RegularUserProfilePage.html
+++ b/profilePage/RegularUserProfilePage.html
@@ -24,7 +24,8 @@
                 </li>
                 <li class="searchForm">
                     <input id="searchButton" type="text" name="search" placeholder="Search..">
-                    <button id="searchIcon" type="submit"></button>                </li>
+                    <button id="searchIcon" type="submit"></button>                
+                </li>
             </ul>
         </div>
     </div>
