Commit the style

--- a/profile_edit_page/profile_edit.html
+++ b/profile_edit_page/profile_edit.html
@@ -16,46 +16,25 @@
 <body>
 
 	<div id="header">
-
-		<div class="container">
-
-			<div id="brand">Fluffy</div>
-
-			<ul>
-
-				<li>
-
-					<a class="navButton" href="">HOME</a>
-
-				</li>
-
-				<li>
-
-					<a class="navButton" href="">ACCOUNT</a>
-
-				</li>
-
-				<li>
-
-					<a class="navButton" href="">CONTACT US</a>
-
-				</li>
-
-				<li class="searchForm">
-
-					<input id="searchButton" type="text" name="search" placeholder="Search..">
-
-					<button id="searchIcon" type="submit"></button>
-
-					<!--<input id="searchIcon" src="./searchIcon.png" type="image" name="submit"> -->
-
-				</li>
-
-			</ul>
-
-		</div>
-
-	</div>
+        <div class="container">
+            <div id="brand">Fluffy</div>
+            <ul id="navBar">
+                <li>
+                    <a class="navButton" href="">HOME</a>
+                </li>
+                <li>
+                    <a class="navButton" href="">ACCOUNT</a>
+                </li>
+                <li>
+                    <a class="navButton" href="">CONTACT US</a>
+                </li>
+                <li class="searchForm">
+                    <input id="searchButton" type="text" name="search" placeholder="Search..">
+                    <button id="searchIcon" type="submit"></button>                
+                </li>
+            </ul>
+        </div>
+    </div>
 
 	<div id="background">
 
