--- a/profilePage/HomestayUserProfilePage.html
+++ b/profilePage/HomestayUserProfilePage.html
@@ -5,24 +5,29 @@
       Fluffy
     </title>
     <link rel="stylesheet" type="text/css" href="ProfilePageStyle.css" />
+    <link rel="stylesheet" type="text/css" href="../stylesheet/index.css" />
 </head>
   <body>
-    <div id="topNavBar">
-        <div id="topWebName">
-                Fluffy
-        </div>
-        <ul>
-            <li>
-                <a class="navButton" href="">hot</a>
-            </li>
-            <li>
-                <a class="navButton" href="">new</a>
-            </li>
-            <li>
-                <a class="navButton" href="">rising</a>
-            </li>
-        </ul>
-    </div>
+        <div id="header">
+                <div class="container">
+                    <div id="brand">Fluffy</div>
+                    <ul id="navBar">
+                        <li>
+                            <a class="navButton" href="">HOME</a>
+                        </li>
+                        <li>
+                            <a class="navButton" href="">ACCOUNT</a>
+                        </li>
+                        <li>
+                            <a class="navButton" href="">CONTACT US</a>
+                        </li>
+                        <li class="searchForm">
+                            <input id="searchButton" type="text" name="search" placeholder="Search..">
+                            <button id="searchIcon" type="submit"></button>                
+                        </li>
+                    </ul>
+                </div>
+            </div>
 
     <div class="backgroundContainer">
         <img id="backgroundImage" src="IMG_4537.jpg">
